<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditWordActivity"
    style="@style/LinearyLayoutStyle.WhiteBackground"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/editTextWord"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/word"
            style="@style/EditTextStyle"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/search"
            android:onClick="onSearchWordClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/editTextTranslation"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/translation"
            style="@style/EditTextStyle"
            />

        <Button
            android:id="@+id/buttonNextTranslation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/next"
            android:onClick="onNextTranslatonClick"
            android:enabled="false"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="20dp">


        <Button
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:onClick="onSaveWordClick"
            />

        <Button
            android:id="@+id/buttonDeleteWord"
            android:layout_marginLeft="10dp"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:enabled="false"
            android:onClick="onDeleteWordClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            style="@style/TextViewStyle"/>

        <Spinner
            android:id="@+id/spinnerCategoriesInEditWord"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/start_learning"
            android:background="@color/buttonBackground"
            android:textColor="@color/colorWhite"
            android:onClick="onStartLearning"
            />

    </LinearLayout>


</LinearLayout>
