<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:paddingTop="20dp">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="onSaveSettings"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:textSize="25sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/random_words"
        android:gravity="center"
        android:textSize="25sp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <RadioButton android:id="@+id/radio_pl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PL"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton android:id="@+id/radio_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="EN"
            android:onClick="onRadioButtonClicked"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>

        <RadioButton android:id="@+id/radio_pl_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PL/EN"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choice_category"
        android:gravity="center"
        android:textSize="25sp"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"/>

    <ListView
        android:id="@+id/listViewSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>




</LinearLayout>
