<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="15dp"
    android:paddingTop="10dp"
    tools:context="com.chmc.project.flascard.LearningActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp">
        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/correctAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGreen"
                android:layout_weight="2"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/countWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>
        </TableRow>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info_green_500_36dp"
            android:onClick="onGoToGoogleTranslateClick"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_refresh"
            android:onClick="onRandomWordClick"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_settings_red_a400_36dp"
            android:onClick="onSettingsClick"/>

    </LinearLayout>

    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp">

        <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >


        <TableRow
            android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                style="@style/TextViewStyle"/>
        </TableRow>

        <TableRow
            android:layout_weight="5">

            <TextView
                android:id="@+id/textViewCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="---"
                style="@style/TextViewStyle"
                />
        </TableRow>



    </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            >


            <TableRow
                android:layout_weight="2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/word"
                    style="@style/TextViewStyle"/>
            </TableRow>

            <TableRow
                android:layout_weight="5">

                <TextView
                    android:id="@+id/textViewWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="---"
                    style="@style/TextViewStyle"
                    />
            </TableRow>



        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_translation"
        android:gravity="center"
        android:background="@color/grayColor"
        android:textSize="15sp"
        />

    <EditText
        android:id="@+id/editTextEnterTranslation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />

    <Button
        android:layout_marginTop="50dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/buttonBackground"
        android:textColor="@color/colorWhite"
        android:textSize="40sp"
        android:onClick="onCheckTranslationClick"
        android:text="@string/check"/>

    <Button
        android:layout_marginTop="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/buttonBackground"
        android:textColor="@color/colorWhite"
        android:textSize="40sp"
        android:onClick="onShowTranslation"
        android:text="@string/show"/>
</LinearLayout>
